<resources>
    <string name="app_name">Agenda</string>
    <string name="tab_text_1">Cadastrar</string>
    <string name="tab_text_2">Listar</string>
    <string name="tab_text_3">Atualizar</string>
    <string name="salvar">SALVAR</string>
    <string name="email">E-mail</string>
    <string name="digite_o_email">Digite o email...</string>
    <string name="nome">Nome</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="buscar">Buscar</string>
    <string name="deletar">DELETAR</string>
    <string name="atualizar">ATUALIZAR</string>
    <string name="digite_o_nome">Digite o nome...</string>
    <string name="hint">hint</string>
    <string name="digite_aqui">Digite aqui...</string>
    <string name="identificador">Identificador</string>
    <string name="cadastro_text">Cadastro de contatos</string>
    <string name="cep">CEP</string>
    <string name="cep">CEP</string>
    <string name="endere_o">Endereço</string>
</resources>
